<resources>
    <string name="widget_no_due_title">No due cards</string>
    <string name="widget_no_due_body">Open app to study or add cards.</string>
    <string name="widget_refresh">Refresh</string>
    <string name="widget_show_answer">Show answer</string>
    <string name="widget_show_question">Show question</string>
    <string name="widget_placeholder_deck">Deck</string>
    <string name="widget_placeholder_body">Card content</string>
    <string name="widget_open">Open</string>
    <string name="widget_refresh_symbol">↻</string>
    <string name="widget_unsolved">Unsolved</string>
    <string name="widget_solved">Solved</string>
    <string name="widget_deck_selector_default">Deck: All decks ▾</string>
    <string name="widget_deck_selector_label">Deck: %1$s ▾</string>
    <string name="widget_pick_deck_title">Select deck for this widget</string>
    <string name="widget_all_decks_option">All decks</string>
    <string name="widget_selected_deck_empty">Selected deck</string>
    <string name="widget_save">Save</string>
    <string name="widget_cancel">Cancel</string>
</resources>
